--- a/index.html
+++ b/index.html
@@ -7,52 +7,83 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        form {
             max-width: 400px;
             margin: auto;
-            text-align: center;
             padding: 20px;
             border: 1px solid #ccc;
-            border-radius: 10px;
+            border-radius: 5px;
+            background-color: #f9f9f9;
         }
-        input, button {
+        input {
             width: 100%;
-            margin-top: 10px;
             padding: 10px;
-            font-size: 16px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        .message {
+            margin-top: 15px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
+
     <h2>User Input Form</h2>
     <form id="userForm">
-        <input type="text" id="phone" placeholder="Enter Phone Number" required>
-        <input type="text" id="name" placeholder="Enter Name" required>
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" name="phone" required>
+
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
         <button type="submit">Submit</button>
     </form>
-    <p id="responseMessage"></p>
+
+    <p id="responseMessage" class="message"></p>
 
     <script>
-     document.getElementById("userForm").addEventListener("submit", function(event) {
-    event.preventDefault();
+        document.getElementById("userForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent form from refreshing the page
 
-    var phone = document.getElementById("phone").value;
-    var name = document.getElementById("name").value;
-    var url = "https://script.google.com/macros/s/AKfycbygXoVYhk1hpfKJ3jKfmd8mIkDkx9yheFrvaQb07I5rD0v9XF-HlvokexFT_gW0EpsQ/exec" + "?phone=" + encodeURIComponent(phone) + "&name=" + encodeURIComponent(name);
+            var phone = document.getElementById("phone").value;
+            var name = document.getElementById("name").value;
 
-    fetch(url, {
-        method: "GET", // Change from POST to GET
-    })
-    .then(response => response.json())
-    .then(data => {
-        document.getElementById("responseMessage").innerText = "Form submitted successfully!";
-        document.getElementById("userForm").reset();
-    })
-    .catch(error => {
-        console.error("Error:", error);
-        document.getElementById("responseMessage").innerText = "Submission failed.";
-    });
-});
+            // Replace with your actual Google Apps Script Web App URL
+            var url = "https://script.google.com/macros/s/AKfycbygXoVYhk1hpfKJ3jKfmd8mIkDkx9yheFrvaQb07I5rD0v9XF-HlvokexFT_gW0EpsQ/exec" + 
+                      "?phone=" + encodeURIComponent(phone) + 
+                      "&name=" + encodeURIComponent(name);
 
+            fetch(url, {
+                method: "GET",
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("responseMessage").innerText = "Form submitted successfully!";
+                document.getElementById("userForm").reset();
+            })
+            .catch(error => {
+                console.error("Error:", error);
+                document.getElementById("responseMessage").innerText = "Submission failed. Please try again.";
+            });
+        });
     </script>
+
 </body>
 </html>
