--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
 
     <p id="responseMessage" class="message"></p>
 
-    <script>
+   <script>
     document.getElementById("userForm").addEventListener("submit", function(event) {
         event.preventDefault(); // Prevent form refresh
 
         var phone = document.getElementById("phone").value;
         var name = document.getElementById("name").value;
 
+        var url = "https://script.google.com/macros/s/AKfycbxti2IHS6efclMq1NFHAxDQw7v-1gs4JtdHsoS3ujUHxgulL48fSvmT4To6CU5lc6nS/exec";
+        
         var formData = new FormData();
         formData.append("phone", phone);
         formData.append("name", name);
-
-        var url = "https://script.google.com/macros/s/AKfycbxWDSkej19L1wHcUM5h5M10_CRsVxeEh6kJtBpJ3tpbfjizV6BMs1LfDdlSjEtnTobp/exec";
 
         fetch(url, {
             method: "POST",
             body: formData
         })
-        .then(response => response.text()) // First, get response as text
+        .then(response => response.text()) // Get response as plain text
         .then(text => {
             console.log("Raw Response:", text); // Debugging response
 
             try {
-                let data = JSON.parse(text.trim()); // Parse JSON after trimming spaces
+                let data = JSON.parse(text.trim()); // Trim spaces and parse JSON
                 if (data.status === "Success") {
-                    document.getElementById("responseMessage").innerText = "Submission failed. Please try again.";
+                    document.getElementById("responseMessage").innerText = "Form submitted successfully!";
                     document.getElementById("userForm").reset();
                 } else {
                     document.getElementById("responseMessage").innerText = "Submission failed: " + data.message;
@@ -93,10 +93,11 @@
         })
         .catch(error => {
             console.error("Error:", error);
-            document.getElementById("responseMessage").innerText = "Form Submitted successfully :)";
+            document.getElementById("responseMessage").innerText = "Submission failed. Please try again.";
         });
     });
 </script>
+
 
 
 </body>
