--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch User Data</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 50px; }
-        form { max-width: 400px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; background-color: #f9f9f9; }
-        input, button { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #007bff; color: white; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
-        .message { margin-top: 15px; font-weight: bold; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        form {
+            max-width: 400px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .message {
+            margin-top: 15px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -19,30 +49,35 @@
     <form id="fetchForm">
         <label for="phone">Enter Phone Number:</label>
         <input type="text" id="phone" name="phone" required>
-        <button type="submit">Fetch</button>
+        <button type="submit">Fetch Data</button>
     </form>
 
     <p id="responseMessage" class="message"></p>
 
     <script>
         document.getElementById("fetchForm").addEventListener("submit", function(event) {
-            event.preventDefault();
+            event.preventDefault(); // Prevent form from refreshing the page
 
             var phone = document.getElementById("phone").value;
-            var url = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxvpb2ASeXV8nkiadrXNsFQ0lPnBYcMiqTxobEqomxEy-LHghHKPwK3rhkObMH3twgt/exec/exec?phone=" + encodeURIComponent(phone);
+            var url = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbzct5J37N4bvaIa9t7XIu9glQkN4CQ0VbnU7rLEbxeAd4SojhplbFQkHXZJ3PdJcSym/exec/exec?phone=" + encodeURIComponent(phone);
 
-            fetch(url)
+            fetch(url, {
+                method: "GET",
+                headers: {
+                    "Content-Type": "application/json"
+                }
+            })
             .then(response => response.json())
             .then(data => {
+                console.log("Response:", data); // Debug response in console
                 if (data.status === "Success") {
-                    document.getElementById("responseMessage").innerText = 
-                        "Name: " + data.name + "\nAmount: " + data.amount;
+                    document.getElementById("responseMessage").innerText = "Name: " + data.name + "\nAmount: " + data.amount;
                 } else {
                     document.getElementById("responseMessage").innerText = "Error: " + data.message;
                 }
             })
             .catch(error => {
-                console.error("Error:", error);
+                console.error("Fetch Error:", error);
                 document.getElementById("responseMessage").innerText = "Failed to fetch data. Please try again.";
             });
         });
